[package]
name = "rbd"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = ["Win32", "Win32_Foundation", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Kernel", "Win32_System_Memory", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = {version = "0.2.175", features = ["extra_traits"]}
setjmp = "0.1.4"

